--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@firebase/auth": "^1.10.4",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
     "idb": "^8.0.3",
     "rxjs": "~7.8.0",
